force-app/main/default/objects/Offer_Or_Quote__c/Offer_Or_Quote__c.object-meta.xml
<CustomObject>
    <label>Offer Or Quote</label>
    <nameField>
        <displayFormat>OQ-{000}</displayFormat>
        <label>Offers Or Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers Or Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>