force-app/main/default/objects/Offer_Or_Quote__c/fields/Offer_Img_Url__c.field-meta.xml
<CustomField>
    <fullName>Offer_Img_Url__c</fullName>
    <label>Offer Img Url</label>
    <type>Url</type>
</CustomField>