force-app/main/default/objects/Offer_Or_Quote__c/fields/Quote_Description__c.field-meta.xml
<CustomField>
    <fullName>Quote_Description__c</fullName>
    <label>Quote Description</label>
    <type>TextArea</type>
</CustomField>