force-app/main/default/objects/Offer_Or_Quote__c/fields/Quote_Person_Img_Url__c.field-meta.xml
<CustomField>
    <fullName>Quote_Person_Img_Url__c</fullName>
    <label>Quote Person Img Url</label>
    <type>Url</type>
</CustomField>