force-app/main/default/objects/Offer_Or_Quote__c/fields/Quote_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Person_Name__c</fullName>
    <label>Quote Person Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>