force-app/main/default/objects/Offer_Or_Quote__c/recordTypes/Offer.recordType-meta.xml
<RecordType>
    <fullName>Offer</fullName>
    <active>true</active>
    <label>Offer</label>
</RecordType>